--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
